@@ -1748,7 +1748,7 @@ fitted.brmsfit <- function(object, newdata = NULL, re_formula = NULL,
 #' \dontrun{
 #' ## fit a model
 #' fit <- brm(rating ~ treat + period + carry + (1|subject), 
-#'            data = inhaler, cluster = 2)
+#'            data = inhaler, cores = 2)
 #' 
 #' ## extract residuals 
 #' res <- residuals(fit, summary = TRUE)
